# weave

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  install.sh  pack.schema.toml  release-please-config.json
.claude/: .packweave_manifest.json  settings.json
.claude/hooks/: pre-commit-check.sh  session-start.sh
.claude/tests/: test-hooks.sh
.githooks/: pre-commit
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  pack_request.md
.github/instructions/: *.instructions.md  copilot.instructions.md  weave.instructions.md
.github/workflows/: ci.yml  codeql.yml  release-please.yml  release.yml  stale.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MILESTONE_2_FOLLOWUP.md  PACKS.md  README.md  REGISTRY.md  ROADMAP.md
docs/specs/: milestone-3.md
src/: error.rs  lib.rs  main.rs  util.rs
src/adapters/: claude_code.rs  codex_cli.rs  gemini_cli.rs  mod.rs
src/cli/: auth.rs  diagnose.rs  init.rs  install.rs  list.rs  mod.rs  profile.rs  publish.rs  remove.rs  search.rs  style.rs  sync.rs  tap.rs  update.rs  use_profile.rs
src/core/: checksum.rs  config.rs  conflict.rs  credentials.rs  install.rs  lock.rs  lockfile.rs  mcp_registry.rs  mod.rs  pack.rs  profile.rs  publish.rs  registry.rs  resolver.rs  store.rs  update.rs  use_profile.rs
tests/: claude_code_adapter.rs  codex_adapter.rs  e2e.rs  fixtures_mcp_resp.json  gemini_adapter.rs  init.rs
tests/e2e/: cli_auth.rs  cli_diagnose.rs  cli_dry_run.rs  cli_hooks.rs  cli_init.rs  cli_install.rs  cli_list.rs  cli_profile.rs  cli_publish.rs  cli_remove.rs  cli_search.rs  cli_sync.rs  cli_tap.rs  (+4 more)
(+7 files in other folders)
