# Copyright 2026 Brenno Rangel Ferrari
# SPDX-License-Identifier: Apache-2.0

[package]
name = "packweave"
version = "0.4.1"
edition = "2024"
description = "A pack manager for AI CLI tools — weave together MCP servers, prompts, commands, and settings"
license = "Apache-2.0"
repository = "https://github.com/PackWeave/weave"
homepage = "https://github.com/PackWeave/weave"
readme = "README.md"
keywords = ["mcp", "cli", "ai", "pack-manager"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
  ".claude/",
  ".github/",
  ".githooks/",
  "docs/",
  "install.sh",
  "SECURITY.md",
  "AGENTS.md",
  "CLAUDE.md",
  "CODEX.md",
  "GEMINI.md",
  "pack.schema.toml",
]

# The CLI binary is named 'weave' regardless of the crate name on crates.io
[[bin]]
name = "weave"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "color"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
wiremock = "0.6"

# cargo-binstall support — tells binstall where to find pre-built binaries
# in GitHub Releases. Asset naming must match the release.yml workflow.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "."
